<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/pic_border"
        android:layout_weight="1"
        android:contentDescription="@string/ivPhoto" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:background="@color/menu" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:contentDescription="@string/btnSave"
                android:src="@drawable/save" />
            
             <ImageButton
                android:id="@+id/btnCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:contentDescription="@string/btnCrop"
                android:src="@drawable/crop" />
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>